# Research_FREnTE

./: .env.example  .gitignore  .tmp_clarks_context_numbered.txt  .tmp_clarks_index_numbered.txt  AGENTS.md  DIAGNOSTICO_100K.md  README.md  bing_test.html  context_100k.yaml  pyproject.toml  requirements.txt  savannah_system_collection.py
.claude/: KNOWLEDGE.md
.codex/: config.toml
.playwright-cli/: page-2026-03-22T02-13-51-695Z.yml
.playwright-mcp/: page-2026-04-15T06-35-08-927Z.yml
.venv310/: pyvenv.cfg
EDA/: README.md
analise_sedimentos/: Analise_sedimentos_Clarks_Hill_Lake.ipynb  Most Corrected Master_Data Clarks Hill Lake (version 3).xlsb.xlsx  requirements.txt
config/: context_clarkshill.yaml  context_savannah_river_gapfill_20260409.yaml  settings.example.yaml  tracks_100k.yaml  tracks_clarkshill.yaml  tracks_savannah_river_gapfill_20260409.yaml
data/: README.md
eda/: README.md
output/: current_search_queries.md
prompts/: README.md  access_agent.txt  access_agent.yaml  dataset_discovery_agent.txt  dataset_discovery_agent.yaml  enrich_agent.yaml  extraction_plan_agent.txt  extraction_plan_agent.yaml  filter_validate_agent.yaml  normalization_agent.txt  normalization_agent.yaml  orchestrator_agent.txt  orchestrator_agent.yaml  perplexity_intelligence_report_agent.yaml  perplexity_source_categorization_agent.yaml  query_expansion_agent.txt  query_expansion_agent.yaml  relevance_agent.txt  relevance_agent.yaml  report_agent.txt  report_agent.yaml  research_scout_agent.txt  research_scout_agent.yaml  source_validation_agent.yaml
reports/: README.md  (+25 more)
(+303 files in other folders)
