[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-frente"
version = "0.1.0"
description = "Pipeline multiagente para pesquisa de bases de dados ambientais do projeto 100K"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Projeto 100K" }
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<1.0",
  "PyYAML>=6.0,<7.0",
  "openai>=1.0,<2.0",
  "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
